<resources>
    <string name="app_name">Pocket Map</string>
    <string name="button_text_search">поиск</string>
    <string name="edit_text_hint_find_address">Найти адрес на карте</string>
    <string name="button_text_send_to_google_maps">on GoogleMaps</string>
    <string name="message_location_not_found">Местоположение не найдено</string>
    <string name="message_location_provider_out_of_service">Не удалось обновить местоположение. Проверьте настройки GPS.</string>
    <string name="message_marker_already_exists">Такой маркер уже существует. Переименовать?</string>
    <string name="search_fragment_menu_item_settings_title">Сохраненные маркеры</string>
    <string name="save_marker_dialog_title">Сохранение маркера</string>
    <string name="save_marker_dialog_message">Сохранить этот маркер?</string>
    <string name="edit_dialog_edit_text_marker_name_hint">Введите имя маркера</string>
    <string name="edit_dialog_title">Переименовать маркер</string>
    <string name="edit_dialog_message_marker_name">Имя маркера:</string>
    <string name="marker_saved_message">Маркер сохранен</string>
    <string name="button_ok_text">OK</string>
    <string name="button_text_cancel">Отмена</string>
    <string name="marker_list_fragment_context_menu_item_delete">Удалить</string>
    <string name="marker_list_fragment_context_menu_item_rename">Переименовать</string>
    <string name="search_on_the_map_menu_item_check_box_location_updates">Местоположение</string>
    <string name="widget_tools_text_view_latlng">55.55331, 23.41234</string>
    <string name="widget_tools_text_view_location_address">Челябинск, проспект Ленина, 25</string>
    <string name="widget_latlng_format" formatted="false">%.5f, %.5f</string>
    <string name="notification_message_detecting_location">Определение местоположения</string>
    <string name="widget_location_updated_message">Местоположение обновлено</string>
    <string name="message_permission_required">Приложению требуется разрешение на доступ к геолокации</string>
    <string name="widget_image_button_content_description_dark">widget preview with the dark theme</string>
    <string name="widget_image_button_content_description_light">widget preview with the light theme</string>
    <string name="widget_image_button_content_description_refresh">refresh location button</string>
</resources>
