<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/WidgetBackground.Dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/widget_top_padding">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/widget_top_padding">

        <TextView
            android:id="@+id/tv_latlng"
            style="@style/WidgetTitle.Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/widget_tools_text_view_latlng" />

        <TextView
            android:id="@+id/tv_location_address"
            style="@style/WidgetText.Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/widget_tools_text_view_location_address" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_update_location"
        style="@style/WidgetImageButton.Dark"
        android:layout_width="@dimen/widget_image_button_size"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/widget_image_button_content_description_refresh"
        android:padding="@dimen/widget_medium_padding"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_replay_black_24dp" />

</LinearLayout>